@@ -413,7 +413,8 @@ to ensure that this command supports the attributes you wish to use.</p>
       in srcfiles or as nested source elements should be written to a
       temporary file to make the command line shorter. Also applies to
       the package names specified via the packagenames attribute or
-      nested package elements.
+      nested package elements.<em>Since Ant 1.7.0</em>, also applies
+      to all the other command line options.
       (<code>yes</code> | <code>no</code>). Default is no.</td>
     <td align="center" valign="top">all</td>
     <td valign="top" align="center">No</td>
